--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel --https",
-    "build": "parcel build"
+    "build": "parcel build --public-url ./"
   },
   "author": "Zappar Limited",
   "license": "MIT",
@@ -13,8 +13,8 @@
     "parcel": "^2.7.0"
   },
   "dependencies": {
-    "@babylonjs/core": "^5.21.0",
-    "@babylonjs/loaders": "^5.21.0",
+    "@babylonjs/core": "^5.43.0",
+    "@babylonjs/loaders": "^5.43.0",
     "@zappar/zappar-babylonjs-es6": "^2.0.0"
   }
 }
